--- a/styles/allSites.css
+++ b/styles/allSites.css
@@ -72,7 +72,6 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
 
@@ -81,6 +80,7 @@ main {
     width: 100%;
     position: relative;
     overflow-x: hidden;
+    max-width: 2800px;
 }
 
 header {
